--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/home/sdseifert/workspaceFIRST/ButtonBoard/libs/RXTXcomm.jar"/>
-	<classpathentry kind="lib" path="/home/sdseifert/workspaceFIRST/ButtonBoard/libs/pi4j-core.jar"/>
-	<classpathentry kind="lib" path="/home/sdseifert/workspaceFIRST/ButtonBoard/libs/commons-lang3-3.8.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
+	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
