--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    maven {
+    	url "https://oss.sonatype.org/content/groups/public"
+	}
 }
 
 dependencies {
@@ -24,8 +27,11 @@ dependencies {
 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
 
 	// https://mvnrepository.com/artifact/com.pi4j/pi4j-core
-	compile group: 'com.pi4j', name: 'pi4j-core', version: '1.1'
-	
+	// compile group: 'com.pi4j', name: 'pi4j-core', version: '1.1'
+
+	// https://oss.sonatype.org/index.html#nexus-search;gav~com.pi4j~pi4j-*~1.3-SNAPSHOT~~
+    compile group: 'com.pi4j', name: 'pi4j-core', version: '1.3-SNAPSHOT'
+   	
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
 }
