--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java'
 
+sourceCompatibility = 1.8
+compileJava {
+    options.compilerArgs += '-proc:none'
+}
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
