--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,4 @@
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-compileJava {
-    options.compilerArgs += '-proc:none'
-}
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    jcenter()
-    maven {
-    	url "https://oss.sonatype.org/content/groups/public"
-	}
-}
-
-dependencies {
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
-    
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
-	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
-
-	// https://mvnrepository.com/artifact/com.pi4j/pi4j-core
-	// compile group: 'com.pi4j', name: 'pi4j-core', version: '1.1'
-
-	// https://oss.sonatype.org/index.html#nexus-search;gav~com.pi4j~pi4j-*~1.3-SNAPSHOT~~
-    compile group: 'com.pi4j', name: 'pi4j-core', version: '1.3-SNAPSHOT'
-   	
-	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
-}
-
-jar {
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    manifest {
-        attributes 'Main-Class': 'org.frc4453.tools.ButtonBoard'
-    }
+wrapper {
+    gradleVersion = '5.0'
+    distributionType = Wrapper.DistributionType.ALL
 }
