--- a/ButtonBoard/build.gradle
+++ b/ButtonBoard/build.gradle
@@ -7,6 +7,22 @@ sourceCompatibility = 1.8
 compileJava {
     options.compilerArgs += '-proc:none'
 }
+
+ssh.settings {
+	knownHosts = allowAnyHosts
+}
+	
+remotes {
+  ButtonBoard {
+  	role('ButtonBoard')
+    host = 'raspberrypi.local'
+    user = 'pi'
+    identity = file('/home/pi/.ssh/id_rsa')
+  }
+}
+
+ext.tgtDir = '/home/pi/'+project.name+'/'
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
@@ -36,6 +52,7 @@ dependencies {
 }
 
 jar {
+    baseName = project.name
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
@@ -44,6 +61,22 @@ jar {
     }
 }
 
+task deploy (dependsOn: 'build') {
+	doLast {
+		ssh.run {
+			session(remotes.ButtonBoard) {
+				println 'Hostname: '+remotes.ButtonBoard.host
+				execute 'sudo systemctl stop '+project.name+'.service', ignoreError: true
+				println 'Moving '+jar.archivePath+' to '+tgtDir
+				put from: jar.archivePath, into: tgtDir
+				execute 'ln -sf '+tgtDir+jar.archiveName+' '+tgtDir+jar.baseName+'.jar'
+				execute 'sync; sudo systemctl daemon-reload; sudo systemctl start '+project.name+'.service'+'; sudo systemctl status '+project.name+'.service'
+			}
+		}
+	}
+}
+
+/*
 deploy {
     targets {
         target('ButtonBoardPi') {
@@ -65,3 +98,4 @@ deploy {
         }
     }
 }
+*/
